--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,8 @@ dialoguer = "0.8.0"
 pbkdf2 = "0.7"
 rand_core = { version = "0.6", features = ["std"] }
 thiserror = "1.0.24"
-
+age = "0.5.1"
+secrecy = "0.7.0"
 # This is a modified version of https://github.com/Fiono11/tiny-bip39
 # which uses thiserror for error handling instead of anyhow.
 # https://github.com/Fiono11/tiny-bip39/commit/d2b3e6a52be395fd652e546080e430ac71bb6c66
