--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,8 +49,10 @@ rand = "0.8.3"
 chrono = { version = "0.4.19", features = ["serde"] }
 doc-comment = "0.3.3"
 fd-lock = "2.0.0"
+dialoguer = "0.8.0"
 thiserror = "1.0.24"
-
+age = "0.5.1"
+secrecy = "0.7.0"
 # This is a modified version of https://github.com/Fiono11/tiny-bip39
 # which uses thiserror for error handling instead of anyhow.
 # https://github.com/Fiono11/tiny-bip39/commit/d2b3e6a52be395fd652e546080e430ac71bb6c66
