--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,42 +16,42 @@ name = "cli"
 
 [features]
 default = ["full"]
-full = ["pcap", "node", "wallet", "rpc_client", "rpc_server"]
-node = ["sled"]
-wallet = []
+full = ["pcap", "node", "rpc_client", "rpc_server"]
+node = ["rpc_server", "sled"]
 rpc_client = ["reqwest", "colored_json", "serde_with"]
-rpc_server = ["warp", "node"]
+rpc_server = ["rpc_client", "warp", "node"]
 deny_warnings = []
 
 # pcap needs node for all the messages. This could be moved outside of node in the future.
 pcap = ["node", "pcarp", "etherparse"]
 
 [dependencies]
-num_cpus = "1.0"
-once_cell = "1.7.2"
 ansi_term = "0.12"
-async-trait = "0.1.50"
-hex = "0.4.2"
 anyhow = "1.0.38"
-clap = "3.0.0-beta.2"
-tracing = "0.1"
-tracing-subscriber = "0.2"
+async-trait = "0.1.50"
 bigdecimal = { version = "0.2.0", features = ["serde"] }
-tokio = { version = "1.5.0", features = ["full", "rt-multi-thread"] }
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0.64"
-blake2 = "0.9.1"
-num = "0.4.0"
-bytes = "1.0.1"
 bitvec = "0.22.3"
+blake2 = "0.9.1"
+bytes = "1.0.1"
 regex = "1.4.6"
 rand = "0.8.3"
 chrono = { version = "0.4.19", features = ["serde"] }
+clap = "3.0.0-beta.2"
 doc-comment = "0.3.3"
 fd-lock = "2.0.0"
-thiserror = "1.0.24"
+futures = "0.3.14"
+hex = "0.4.2"
+num = "0.4.0"
+num_cpus = "1.0"
+once_cell = "1.7.2"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0.64"
 strum = "0.20.0"
 strum_macros = "0.20.1"
+thiserror = "1.0.24"
+tokio = { version = "1.5.0", features = ["full", "rt-multi-thread"] }
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 # This is a modified version of https://github.com/Fiono11/tiny-bip39
 # which uses thiserror for error handling instead of anyhow.
@@ -75,12 +75,12 @@ ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
 sled = { version = "0.34.6", optional = true }
 
 # pcap only
-pcarp = { version = "1.2.0", optional = true }
 etherparse = { version = "0.9.0", optional = true }
+pcarp = { version = "1.2.0", optional = true }
 
 # rpc_client only
-reqwest = { version = "0.11.3", optional = true, default-features = false, features = ["rustls-tls"] }
 colored_json = { version = "2.1.0", optional = true }
+reqwest = { version = "0.11.3", optional = true, default-features = false, features = ["rustls-tls"] }
 serde_with = { version = "1.8.1", optional = true, features = ["chrono"] }
 
 # rpc_server only
