--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,10 +33,9 @@ bigdecimal = { version = "0.2.0", features = ["serde"] }
 bitvec = "0.22.3"
 blake2 = "0.9.1"
 bytes = "1.0.1"
-regex = "1.5.4"
-rand = "0.8.3"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = "3.0.0-beta.2"
+directories = "3.0.2"
 doc-comment = "0.3.3"
 fd-lock = "2.0.0"
 futures = "0.3.15"
@@ -44,6 +43,8 @@ hex = "0.4.2"
 num = "0.4.0"
 num_cpus = "1.0"
 once_cell = "1.7.2"
+rand = "0.8.3"
+regex = "1.5.4"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 strum = "0.20.0"
