solved EncryptionError issue by forking the age crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ doc-comment = "0.3.3"
 fd-lock = "2.0.0"
 dialoguer = "0.8.0"
 thiserror = "1.0.24"
-age = "0.5.1"
+age = { path = "../rage/age" }
 secrecy = "0.7.0"
 # This is a modified version of https://github.com/Fiono11/tiny-bip39
 # which uses thiserror for error handling instead of anyhow.
